# micromanager

./: Cargo.toml
.cargo/: config.toml
bins/micromanager-calibrate/: Cargo.toml
bins/micromanager-calibrate/src/: export.rs  plot.rs  point.rs  window.rs
crates/calibrate/: Cargo.toml
crates/calibrate/src/: main.rs
crates/plotters-eframe/: Cargo.toml
crates/plotters-eframe/src/: backend.rs  widget.rs
crates/retrospect/: Cargo.toml
crates/retrospect/src/: export.rs  gtk_window.rs  main.rs  plot.rs  window.rs
libs/micrimanager-tele/: Cargo.toml
libs/micrimanager-tele/src/: lib.rs
libs/plotters-eframe/: Cargo.toml
libs/plotters-eframe/src/: ext.rs  lib.rs
vis/: Cargo.toml
vis/src/: main.rs  plot.py  plot.rs  python.rs  window.rs
