[package]
name = "micromanager-calibrate"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0.6.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
tracing-error = "0.2.0"
rand = "0.8.4"
egui = "0.16.1"
eframe = "0.16.0"
plotters-eframe = { path = "../../libs/plotters-eframe" }
plotters = { version = "0.3.1", default-features = false, features = [
    "svg_backend",
    "bitmap_backend",
    "bitmap_encoder",
    "all_series",
    "all_elements",
] }
rfd = "0.7.0"
