[package]
name = "micromanager-calibrate"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
tracing-error = "0.2.0"
rand = "0.8.4"
egui = "0.16.1"
eframe = "0.16.0"
plotters-eframe = { path = "../plotters-eframe" }
plotters-bitmap = { version = "0.3.1", features = ["image_encoder"] }
plotters-svg = "0.3.1"
plotters = "0.3.1"
rfd = "0.7.0"
